# Form-Agent

./: .gitignore  APPROACH.MD  ARCHI.MD  CHECK.MD  IMPROVEMENTS.MD  PROBLEM.MD  README.md  RUN.MD  WORKING.MD  app.py  cleanup_and_reindex.py  code_review.md  main.py  pyproject.toml  requirements.txt
docs/: architecture.md  demo_run_log.txt
notebooks/: 01_extraction_eval.ipynb  02_retrieval_eval.ipynb  03_prompt_iteration.ipynb  generate_samples.py
src/: agent.py  chunking.py  extraction.py  ingestion.py  llm_client.py  retrieval.py  router.py  schemas.py  structured_store.py  synthesis.py  vectorstore.py
tests/: conftest.py  test_chunking.py  test_extraction.py  test_retrieval.py  test_router.py  test_schemas.py  test_structured_store.py
