[project]
name = "form-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5",
    "python-docx>=1.1.0",
    "ipykernel>=7.3.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.10",
    "pydantic[email]>=2.0",
    "pytesseract>=0.3.13",
    "rank-bm25>=0.2.2",
    "requests>=2.31.0",
    "ollama>=0.1.0",
    "streamlit>=1.59.2",
]
